     between #ifdef HAVE_FFMPEG. (Kenneth Lavrsen)
     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2006x03x09x012244
   * Fixed a bug that only allowed remote control of max 9 cameras. Now
     Motion can present up to 99 cameras in its http remote control interface
     (Angel Carpintero based on idea by Chuck Sheehan)
     http://www.lavrsen.dk/twiki/bin/view/Motion/WebHttpManyThreads

3.2.5.1  Doc and man page correction
   * ffmpeg_filename has changed name to movie_filename to prepare for
     alternative movie encoding to the current ffmpeg based implementation
     and ffmpeg_filename will then be a bad name (Kenneth Lavrsen)
   * Man page corrected.

3.2.5   Formal Release. Summary of changes

   * Fixed misc problems in FreeBSD. (Angel Carpintero)
      * Update README.FreeBSD
      * Fix problems with tuner_device and frequency, now by default is not
        defined to allow use any input without problem.
      * Replace strndup() by memcpy() in netcam.c
      * Merged configure.in.freebsd with configure.in (configure.in.freebsd
        deleted)
      * Remove a warning when used --without-bktr
      * Remove cpu optimization (is broken)
   * Fixed memory leak in ffmpeg code. (Andrew Hamilton)
   * Fixed http control of pan and tilt (Angel Carpintero)
     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2005x12x22x122649
   * Fixed netcamera bug related to seperating frames in an mjpeg stream.
     (Peter Holik). From mailing list 23 Dec 2005.
   * Fix related to connecting to the netcam (William Black)
     From mailing list 23 Dec 2005.
   * Changed CHANGELOG to same bullet format as used by TWiki to make it easier
     to write release notes (Kenneth Lavrsen)
   * Changed CREDITS to same bullet format as CHANGELOG (Kenneth Lavrsen)
   * Fixed sql_mask not initialisated correctly (Angel Carpintero)
     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2006x01x09x175603 